--- a/react-quickstart/src/index.css
+++ b/react-quickstart/src/index.css
@@ -37,6 +37,10 @@ h1 {
   line-height: 1.1;
 }
 
+.avatar {
+  border-radius: 50%;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
